alter table if exists acceptancecriterion drop constraint if exists FKfw52ou2kc2fgmy91hqme349me;
alter table if exists ceremony drop constraint if exists FK8fmoi7274ianitt0h6cyd2s9i;
alter table if exists ceremony drop constraint if exists FK59mmtr9nkkt0icmgmh6qxla4y;
alter table if exists deliverable drop constraint if exists FK6fs9q9uf13keu6xd0q5ajrmu6;
alter table if exists person drop constraint if exists FK3p9u7bjx26nvg2a3ilordweqb;
alter table if exists productbacklog drop constraint if exists FKocvmn1b8jmh9mdit1d24bi67v;
alter table if exists scrumdevelopmenttask drop constraint if exists FK83ysce6u968xxw8t4mp4pxpqw;
alter table if exists scrumdevelopmenttask drop constraint if exists FKmx8udiswk26mhy1uaj2vvx3vm;
alter table if exists scrumdevelopmenttask drop constraint if exists FKs6vfj4eqs3k3ddwb7hq72sgdh;
alter table if exists scrumproject drop constraint if exists FKjn11hsjxi2p4556uyqhc5xei9;
alter table if exists scrumproject drop constraint if exists FKah5io3jgljwks6tl2569bm3ek;
alter table if exists scrumprojectdeliverable drop constraint if exists FKd0hvj7ywqkwuxecj5juhomfg5;
alter table if exists scrumteam drop constraint if exists FKdqmeodmewf1ovsc8fkocu2ys2;
alter table if exists sprint drop constraint if exists FK8vr0u703p49ieco0qn44l52x7;
alter table if exists sprint drop constraint if exists FKdpiwl6r5w2rsfro8nxf3nfrc7;
alter table if exists sprint_scrumdevelopmenttask drop constraint if exists FK7vt3j03k7dewos2cou7wt566i;
alter table if exists sprint_scrumdevelopmenttask drop constraint if exists FKm71n05wavk04k28fcvh9l1f36;
alter table if exists sprintdeliverable drop constraint if exists FKbxbjw2br5pk332blhnw8wp9x5;
alter table if exists sprintdeliverable drop constraint if exists FK7l8lkvoaje4thjtdwpnopph4o;
alter table if exists teammembership drop constraint if exists FK7twk5vq5jggy5821vfsop01ka;
alter table if exists teammembership drop constraint if exists FKc3ffdw8pf7v9fyg3x4fx2hpxt;
alter table if exists userstory drop constraint if exists FKc2nv3tj65u1jg16t7hfhyyfae;
alter table if exists userstory drop constraint if exists FK1h6ic9178emqy1gta29jufn9b;
alter table if exists userstory drop constraint if exists FK40pnagg83ousbof5kd5lg6bvq;
alter table if exists userstory drop constraint if exists FK4a3yo393xjhj0cwc7ugtqdsyb;
drop table if exists acceptancecriterion cascade;
drop table if exists ceremony cascade;
drop table if exists deliverable cascade;
drop table if exists person cascade;
drop table if exists productbacklog cascade;
drop table if exists productbacklogdefinition cascade;
drop table if exists scrumdevelopmenttask cascade;
drop table if exists scrumprocess cascade;
drop table if exists scrumproject cascade;
drop table if exists scrumprojectdeliverable cascade;
drop table if exists scrumteam cascade;
drop table if exists sprint cascade;
drop table if exists sprint_scrumdevelopmenttask cascade;
drop table if exists sprintbacklog cascade;
drop table if exists sprintdeliverable cascade;
drop table if exists teammembership cascade;
drop table if exists userstory cascade;
create table acceptancecriterion (id bigserial not null, created_at timestamp(6), description varchar(255), end_date date, external_id varchar(255), internal_id varchar(255), name varchar(255), start_date date, url varchar(255), createdt_date date, type varchar(255), userstory_id bigint, primary key (id));
create table ceremony (id bigserial not null, created_at timestamp(6), description varchar(255), end_date date, external_id varchar(255), internal_id varchar(255), name varchar(255), start_date date, url varchar(255), type varchar(255), sprint_id bigint, sprintbacklog_id bigint, primary key (id));
create table deliverable (id bigserial not null, created_at timestamp(6), description varchar(255), end_date date, external_id varchar(255), internal_id varchar(255), name varchar(255), start_date date, url varchar(255), type varchar(255), sprintdeliverable_id bigint, primary key (id));
create table person (id bigserial not null, created_at timestamp(6), description varchar(255), end_date date, external_id varchar(255), internal_id varchar(255), name varchar(255), start_date date, url varchar(255), email varchar(255), ceremony_id bigint, primary key (id));
create table productbacklog (id bigserial not null, created_at timestamp(6), description varchar(255), end_date date, external_id varchar(255), internal_id varchar(255), name varchar(255), start_date date, url varchar(255), createdt_date date, productbacklogdefinition_id bigint, primary key (id));
create table productbacklogdefinition (id bigserial not null, created_at timestamp(6), description varchar(255), end_date date, external_id varchar(255), internal_id varchar(255), name varchar(255), start_date date, url varchar(255), primary key (id));
create table scrumdevelopmenttask (id bigserial not null, created_at timestamp(6), description varchar(255), end_date date, external_id varchar(255), internal_id varchar(255), name varchar(255), start_date date, url varchar(255), sucessfully varchar(255), type varchar(255), scrumdevelopmenttask_id bigint, sprintbacklog_id bigint, userstory_id bigint, primary key (id));
create table scrumprocess (id bigserial not null, created_at timestamp(6), description varchar(255), end_date date, external_id varchar(255), internal_id varchar(255), name varchar(255), start_date date, url varchar(255), primary key (id));
create table scrumproject (id bigserial not null, created_at timestamp(6), description varchar(255), end_date date, external_id varchar(255), internal_id varchar(255), name varchar(255), start_date date, url varchar(255), type varchar(255), scrumprocess_id bigint, scrumproject_id bigint, primary key (id));
create table scrumprojectdeliverable (id bigserial not null, created_at timestamp(6), description varchar(255), end_date date, external_id varchar(255), internal_id varchar(255), name varchar(255), start_date date, url varchar(255), scrumprocess_id bigint, primary key (id));
create table scrumteam (id bigserial not null, created_at timestamp(6), description varchar(255), end_date date, external_id varchar(255), internal_id varchar(255), name varchar(255), start_date date, url varchar(255), scrumproject_id bigint, primary key (id));
create table sprint (id bigserial not null, created_at timestamp(6), description varchar(255), end_date date, external_id varchar(255), internal_id varchar(255), name varchar(255), start_date date, url varchar(255), scrumprocess_id bigint, sprintbacklog_id bigint, primary key (id));
create table sprint_scrumdevelopmenttask (sprint_id bigint not null, scrumdevelopmenttask_id bigint not null, primary key (sprint_id, scrumdevelopmenttask_id));
create table sprintbacklog (id bigserial not null, created_at timestamp(6), description varchar(255), end_date date, external_id varchar(255), internal_id varchar(255), name varchar(255), start_date date, url varchar(255), createdt_date date, primary key (id));
create table sprintdeliverable (id bigserial not null, created_at timestamp(6), description varchar(255), end_date date, external_id varchar(255), internal_id varchar(255), name varchar(255), start_date date, url varchar(255), scrumprojectdeliverable_id bigint, sprint_id bigint, primary key (id));
create table teammembership (id bigserial not null, created_at timestamp(6), description varchar(255), end_date date, external_id varchar(255), internal_id varchar(255), name varchar(255), start_date date, url varchar(255), scrumrole varchar(255), person_id bigint, scrumteam_id bigint, primary key (id));
create table userstory (id bigserial not null, created_at timestamp(6), description varchar(255), end_date date, external_id varchar(255), internal_id varchar(255), name varchar(255), start_date date, url varchar(255), created_date date, effort varchar(255), importance varchar(255), type varchar(255), update_date date, deliverable_id bigint, productbacklog_id bigint, sprintbacklog_id bigint, userstory_id bigint, primary key (id));
alter table if exists acceptancecriterion add constraint UK_hfgk9d5hq6jcsam5ld6tvl0vc unique (external_id);
alter table if exists acceptancecriterion add constraint UK_oly1q21khicoodtflorwboisx unique (internal_id);
alter table if exists ceremony add constraint UK_3gcu7n1yq6fwxaeih9vk7la4 unique (external_id);
alter table if exists ceremony add constraint UK_cbqfljch8ktymirwivwjm8rye unique (internal_id);
alter table if exists deliverable add constraint UK_11y2t66wqex84f3f71ev1307t unique (external_id);
alter table if exists deliverable add constraint UK_b3pellnjtrn2a3cxyl3ln80bp unique (internal_id);
alter table if exists person add constraint UK_b88nmexbm4eag0edh6hhphk4e unique (external_id);
alter table if exists person add constraint UK_1h69uaxo6kwmmr505sd7nhfbo unique (internal_id);
alter table if exists productbacklog add constraint UK_dxkr7yhsr2u4vy2ngc50dvdgm unique (external_id);
alter table if exists productbacklog add constraint UK_nhfld3rr3dix6k8i0uyspl26u unique (internal_id);
alter table if exists productbacklogdefinition add constraint UK_2afwvsunl82ig14djfcxxuye9 unique (external_id);
alter table if exists productbacklogdefinition add constraint UK_pr3s8ldt815uy0sq6oh8nb6a4 unique (internal_id);
alter table if exists scrumdevelopmenttask add constraint UK_sdoo7b5cxdyqsrveqinctgyuv unique (external_id);
alter table if exists scrumdevelopmenttask add constraint UK_1x1uwl7qjlq14yiltmkes3b2x unique (internal_id);
alter table if exists scrumprocess add constraint UK_fsp3ywbqdv8ebe5e4acsy6cki unique (external_id);
alter table if exists scrumprocess add constraint UK_gitp938eooy7khc8bs6ptpyh4 unique (internal_id);
alter table if exists scrumproject add constraint UK_2gjptxertwkkyen9f6w8dg7ck unique (external_id);
alter table if exists scrumproject add constraint UK_k8pa8oyd98g6rg8f4ckkdj94a unique (internal_id);
alter table if exists scrumprojectdeliverable add constraint UK_1fvm95i0d98kn6mujosyldwyc unique (external_id);
alter table if exists scrumprojectdeliverable add constraint UK_j19aks754wpd8u80vfw6axnr4 unique (internal_id);
alter table if exists scrumteam add constraint UK_iw9piy1xifbu3fvuw5eines1p unique (external_id);
alter table if exists scrumteam add constraint UK_tchmb0mpu4mviskb92cla3ulc unique (internal_id);
alter table if exists sprint add constraint UK_sg49gmqi9eucbx2hd2f26wg4c unique (external_id);
alter table if exists sprint add constraint UK_l0ve65cpi4t8ttji1ktffddc3 unique (internal_id);
alter table if exists sprintbacklog add constraint UK_tep0kmio5o2knolllhijg2f9n unique (external_id);
alter table if exists sprintbacklog add constraint UK_9uv3xvsm6r9864of1s9qelbm2 unique (internal_id);
alter table if exists sprintdeliverable add constraint UK_f1v7py667fsw5ypwtgs58j1su unique (external_id);
alter table if exists sprintdeliverable add constraint UK_nei2avwcb85krsl5phqc6kfel unique (internal_id);
alter table if exists teammembership add constraint UK_3p28xbd0ftoo1qcrp089at106 unique (external_id);
alter table if exists teammembership add constraint UK_c14jbab4on1ny123qhxajt1ux unique (internal_id);
alter table if exists userstory add constraint UK_17pjnmc72u8qaj0tn8dab15kp unique (external_id);
alter table if exists userstory add constraint UK_36mvfvw085f2celxc1r776ts2 unique (internal_id);
alter table if exists acceptancecriterion add constraint FKfw52ou2kc2fgmy91hqme349me foreign key (userstory_id) references userstory;
alter table if exists ceremony add constraint FK8fmoi7274ianitt0h6cyd2s9i foreign key (sprint_id) references sprint;
alter table if exists ceremony add constraint FK59mmtr9nkkt0icmgmh6qxla4y foreign key (sprintbacklog_id) references sprintbacklog;
alter table if exists deliverable add constraint FK6fs9q9uf13keu6xd0q5ajrmu6 foreign key (sprintdeliverable_id) references sprintdeliverable;
alter table if exists person add constraint FK3p9u7bjx26nvg2a3ilordweqb foreign key (ceremony_id) references ceremony;
alter table if exists productbacklog add constraint FKocvmn1b8jmh9mdit1d24bi67v foreign key (productbacklogdefinition_id) references productbacklogdefinition;
alter table if exists scrumdevelopmenttask add constraint FK83ysce6u968xxw8t4mp4pxpqw foreign key (scrumdevelopmenttask_id) references scrumdevelopmenttask;
alter table if exists scrumdevelopmenttask add constraint FKmx8udiswk26mhy1uaj2vvx3vm foreign key (sprintbacklog_id) references sprintbacklog;
alter table if exists scrumdevelopmenttask add constraint FKs6vfj4eqs3k3ddwb7hq72sgdh foreign key (userstory_id) references userstory;
alter table if exists scrumproject add constraint FKjn11hsjxi2p4556uyqhc5xei9 foreign key (scrumprocess_id) references scrumprocess;
alter table if exists scrumproject add constraint FKah5io3jgljwks6tl2569bm3ek foreign key (scrumproject_id) references scrumproject;
alter table if exists scrumprojectdeliverable add constraint FKd0hvj7ywqkwuxecj5juhomfg5 foreign key (scrumprocess_id) references scrumprocess;
alter table if exists scrumteam add constraint FKdqmeodmewf1ovsc8fkocu2ys2 foreign key (scrumproject_id) references scrumproject;
alter table if exists sprint add constraint FK8vr0u703p49ieco0qn44l52x7 foreign key (scrumprocess_id) references scrumprocess;
alter table if exists sprint add constraint FKdpiwl6r5w2rsfro8nxf3nfrc7 foreign key (sprintbacklog_id) references sprintbacklog;
alter table if exists sprint_scrumdevelopmenttask add constraint FK7vt3j03k7dewos2cou7wt566i foreign key (scrumdevelopmenttask_id) references scrumdevelopmenttask;
alter table if exists sprint_scrumdevelopmenttask add constraint FKm71n05wavk04k28fcvh9l1f36 foreign key (sprint_id) references sprint;
alter table if exists sprintdeliverable add constraint FKbxbjw2br5pk332blhnw8wp9x5 foreign key (scrumprojectdeliverable_id) references scrumprojectdeliverable;
alter table if exists sprintdeliverable add constraint FK7l8lkvoaje4thjtdwpnopph4o foreign key (sprint_id) references sprint;
alter table if exists teammembership add constraint FK7twk5vq5jggy5821vfsop01ka foreign key (person_id) references person;
alter table if exists teammembership add constraint FKc3ffdw8pf7v9fyg3x4fx2hpxt foreign key (scrumteam_id) references scrumteam;
alter table if exists userstory add constraint FKc2nv3tj65u1jg16t7hfhyyfae foreign key (deliverable_id) references deliverable;
alter table if exists userstory add constraint FK1h6ic9178emqy1gta29jufn9b foreign key (productbacklog_id) references productbacklog;
alter table if exists userstory add constraint FK40pnagg83ousbof5kd5lg6bvq foreign key (sprintbacklog_id) references sprintbacklog;
alter table if exists userstory add constraint FK4a3yo393xjhj0cwc7ugtqdsyb foreign key (userstory_id) references userstory;
