package br.nemo.immigrant.ontology.entity.scrumdeliverable.models;

public enum DeliverableType {
    NOTACCEPTEDDELIVERABLE,
    ACCEPTEDDELIVERABLE
}